# SilentNight

./: .replit  Cargo.toml  README.md  server.rs
.cargo/: config.toml
src/: main.rs
static/: index.html
