[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
crossterm = "0.24"
serde = "1.0"
serde_json = "1.0"

# Reqwest with Rustls, JSON, multipart, streaming
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
