[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

